2007-01-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_trackback3.rb: fix bug: show invisible trackbacks.

2007-01-19 zunda <zunda at freeshell.org>
	* my-sequel.rb: modified to require 'erb' only when needed
	* my-sequel.rb: MySequel::Conf: modified to use separate parameter,
	and added check boxes to restore to the default values
	* my-sequel.rb: MySequel::css: modified not to use empty css

2007-01-19 zunda <zunda at freeshell.org>
	* my-sequel.rb: copied from zunda's local repository, v.1.28
	* ja/my-sequel.rb: copied from zunda's local repository, v.1.10

2007-01-19 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fix bug: generate empty feed.

2007-01-18 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb, ping.rb, tb-send.rb: fix charset to UTF-8, and using to_utf8 method.

2007-01-18 zunda <zunda at freeshell.org>
	* category.rb: added a code to recreate category cache files
	when escape or encoding for cache files has been chnaged

2007-01-17 zunda <zunda at freeshell.org>
	* navi_user.rb: added and modified to use mock-up CGI class to
	avoid error from cgi.rb:980:in `read_multipart': no content
	body (EOFError)

2007-01-18  Kazuhiko  <kazuhiko@fdiary.net>
	* amazon.rb: convert to String first.

2007-01-17 SHIBATA Hiroshi <h-sbt@nifty.com>
	* pb-show.rb:  modified not to escape anchor() because
	number_anchor.rb returns class attribute for a tag. This might
	be a security problem in the future.

2007-01-17 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: support TrackBack spec 1.2 and send by UTF-8 charset.
	* trackback/tb.rb: support TrackBack spec 1.2.
	* ja/{makerss,ping}.rb: use NKF insted of Uconv.
	* zh/{makerss,ping}.rb: use Iconv for convert to UTF-8.

2007-01-16 TADA Tadashi <sho@spc.gr.jp>
	* bq.rb: i18n. {ja,en,zh}/bq.rb added.

2007-01-14 TADA Tadashi <sho@spc.gr.jp>
	* tlink.rb, xmlrpc.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and escape base-html

2007-01-13 zunda <zunda at freeshell.org>